APIs/googleapis.com/baremetalsolution/v2/java-client/README.md
# openapi-java-client

Bare Metal Solution API
- API version: v2
  - Build date: 2024-10-12T11:46:58.386217-04:00[America/New_York]
  - Generator version: 7.9.0

Provides ways to manage Bare Metal Solution hardware installed in a regional extension located near a Google Cloud data center.

  For more information, please visit [https://google.com](https://google.com)

*Automatically generated by the [OpenAPI Generator](https://openapi-generator.tech)*


## Requirements

Building the API client library requires:
1. Java 1.8+
2. Maven (3.8.3+)/Gradle (7.2+)

## Installation

To install the API client library to your local Maven repository, simply execute:

```shell
mvn clean install
```

To deploy it to a remote Maven repository instead, configure the settings of the repository and execute:

```shell
mvn clean deploy
```

Refer to the [OSSRH Guide](http://central.sonatype.org/pages/ossrh-guide.html) for more information.

### Maven users

Add this dependency to your project's POM:

```xml
<dependency>
  <groupId>org.openapitools</groupId>
  <artifactId>openapi-java-client</artifactId>
  <version>v2</version>
  <scope>compile</scope>
</dependency>
```

### Gradle users

Add this dependency to your project's build file:

```groovy
  repositories {
    mavenCentral()     // Needed if the 'openapi-java-client' jar has been published to maven central.
    mavenLocal()       // Needed if the 'openapi-java-client' jar has been published to the local maven repo.
  }

  dependencies {
     implementation "org.openapitools:openapi-java-client:v2"
  }
```

### Others

At first generate the JAR by executing:

```shell
mvn clean package
```

Then manually install the following JARs:

* `target/openapi-java-client-v2.jar`
* `target/lib/*.jar`

## Getting Started

Please follow the [installation](#installation) instruction and execute the following Java code:

```java

// Import classes:
import org.openapitools.client.ApiClient;
import org.openapitools.client.ApiException;
import org.openapitools.client.Configuration;
import org.openapitools.client.auth.*;
import org.openapitools.client.model.*;
import org.openapitools.client.api.ProjectsApi;

public class Example {
  public static void main(String[] args) {
    ApiClient defaultClient = Configuration.getDefaultApiClient();
    defaultClient.setBasePath("https://baremetalsolution.googleapis.com");
    
    // Configure OAuth2 access token for authorization: Oauth2c
    OAuth Oauth2c = (OAuth) defaultClient.getAuthentication("Oauth2c");
    Oauth2c.setAccessToken("YOUR ACCESS TOKEN");

    // Configure OAuth2 access token for authorization: Oauth2
    OAuth Oauth2 = (OAuth) defaultClient.getAuthentication("Oauth2");
    Oauth2.setAccessToken("YOUR ACCESS TOKEN");

    ProjectsApi apiInstance = new ProjectsApi(defaultClient);
    String instance = "instance_example"; // String | Required. Name of the instance.
    String $xgafv = "1"; // String | V1 error format.
    String accessToken = "accessToken_example"; // String | OAuth access token.
    String alt = "json"; // String | Data format for response.
    String paramCallback = "paramCallback_example"; // String | JSONP
    String fields = "fields_example"; // String | Selector specifying which fields to include in a partial response.
    String key = "key_example"; // String | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
    String oauthToken = "oauthToken_example"; // String | OAuth 2.0 token for the current user.
    Boolean prettyPrint = true; // Boolean | Returns response with indentations and line breaks.
    String quotaUser = "quotaUser_example"; // String | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
    String uploadProtocol = "uploadProtocol_example"; // String | Upload protocol for media (e.g. \"raw\", \"multipart\").
    String uploadType = "uploadType_example"; // String | Legacy upload protocol for media (e.g. \"media\", \"multipart\").
    DetachLunRequest detachLunRequest = new DetachLunRequest(); // DetachLunRequest | 
    try {
      Operation result = apiInstance.baremetalsolutionProjectsLocationsInstancesDetachLun(instance, $xgafv, accessToken, alt, paramCallback, fields, key, oauthToken, prettyPrint, quotaUser, uploadProtocol, uploadType, detachLunRequest);
      System.out.println(result);
    } catch (ApiException e) {
      System.err.println("Exception when calling ProjectsApi#baremetalsolutionProjectsLocationsInstancesDetachLun");
      System.err.println("Status code: " + e.getCode());
      System.err.println("Reason: " + e.getResponseBody());
      System.err.println("Response headers: " + e.getResponseHeaders());
      e.printStackTrace();
    }
  }
}

```

## Documentation for API Endpoints

All URIs are relative to *https://baremetalsolution.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesDetachLun**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesDetachLun) | **POST** /v2/{instance}:detachLun | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesDisableInteractiveSerialConsole**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesDisableInteractiveSerialConsole) | **POST** /v2/{name}:disableInteractiveSerialConsole | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesEnableInteractiveSerialConsole**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesEnableInteractiveSerialConsole) | **POST** /v2/{name}:enableInteractiveSerialConsole | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesList) | **GET** /v2/{parent}/instances | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesLoadAuthInfo**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesLoadAuthInfo) | **GET** /v2/{name}:loadAuthInfo | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesReset**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesReset) | **POST** /v2/{name}:reset | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesStart**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesStart) | **POST** /v2/{name}:start | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsInstancesStop**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsInstancesStop) | **POST** /v2/{name}:stop | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsList) | **GET** /v2/{name}/locations | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsNetworksList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsNetworksList) | **GET** /v2/{parent}/networks | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsNetworksListNetworkUsage**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsNetworksListNetworkUsage) | **GET** /v2/{location}/networks:listNetworkUsage | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsNfsSharesCreate**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsNfsSharesCreate) | **POST** /v2/{parent}/nfsShares | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsNfsSharesList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsNfsSharesList) | **GET** /v2/{parent}/nfsShares | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsOsImagesList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsOsImagesList) | **GET** /v2/{parent}/osImages | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsProvisioningConfigsCreate**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsProvisioningConfigsCreate) | **POST** /v2/{parent}/provisioningConfigs | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsProvisioningConfigsSubmit**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsProvisioningConfigsSubmit) | **POST** /v2/{parent}/provisioningConfigs:submit | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsProvisioningQuotasList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsProvisioningQuotasList) | **GET** /v2/{parent}/provisioningQuotas | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsSshKeysCreate**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsSshKeysCreate) | **POST** /v2/{parent}/sshKeys | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsSshKeysList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsSshKeysList) | **GET** /v2/{parent}/sshKeys | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesList) | **GET** /v2/{parent}/volumes | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesLunsEvict**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesLunsEvict) | **POST** /v2/{name}:evict | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesLunsList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesLunsList) | **GET** /v2/{parent}/luns | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesPatch**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesPatch) | **PATCH** /v2/{name} | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesRename**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesRename) | **POST** /v2/{name}:rename | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesResize**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesResize) | **POST** /v2/{volume}:resize | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesSnapshotsCreate**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesSnapshotsCreate) | **POST** /v2/{parent}/snapshots | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesSnapshotsDelete**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesSnapshotsDelete) | **DELETE** /v2/{name} | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesSnapshotsGet**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesSnapshotsGet) | **GET** /v2/{name} | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesSnapshotsList**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesSnapshotsList) | **GET** /v2/{parent}/snapshots | 
*ProjectsApi* | [**baremetalsolutionProjectsLocationsVolumesSnapshotsRestoreVolumeSnapshot**](docs/ProjectsApi.md#baremetalsolutionProjectsLocationsVolumesSnapshotsRestoreVolumeSnapshot) | **POST** /v2/{volumeSnapshot}:restoreVolumeSnapshot | 


## Documentation for Models

 - [AllowedClient](docs/AllowedClient.md)
 - [DetachLunRequest](docs/DetachLunRequest.md)
 - [GoogleCloudBaremetalsolutionV2LogicalInterface](docs/GoogleCloudBaremetalsolutionV2LogicalInterface.md)
 - [GoogleCloudBaremetalsolutionV2ServerNetworkTemplateLogicalInterface](docs/GoogleCloudBaremetalsolutionV2ServerNetworkTemplateLogicalInterface.md)
 - [Instance](docs/Instance.md)
 - [InstanceConfig](docs/InstanceConfig.md)
 - [InstanceQuota](docs/InstanceQuota.md)
 - [IntakeVlanAttachment](docs/IntakeVlanAttachment.md)
 - [ListInstancesResponse](docs/ListInstancesResponse.md)
 - [ListLocationsResponse](docs/ListLocationsResponse.md)
 - [ListLunsResponse](docs/ListLunsResponse.md)
 - [ListNetworkUsageResponse](docs/ListNetworkUsageResponse.md)
 - [ListNetworksResponse](docs/ListNetworksResponse.md)
 - [ListNfsSharesResponse](docs/ListNfsSharesResponse.md)
 - [ListOSImagesResponse](docs/ListOSImagesResponse.md)
 - [ListProvisioningQuotasResponse](docs/ListProvisioningQuotasResponse.md)
 - [ListSSHKeysResponse](docs/ListSSHKeysResponse.md)
 - [ListVolumeSnapshotsResponse](docs/ListVolumeSnapshotsResponse.md)
 - [ListVolumesResponse](docs/ListVolumesResponse.md)
 - [LoadInstanceAuthInfoResponse](docs/LoadInstanceAuthInfoResponse.md)
 - [Location](docs/Location.md)
 - [LogicalNetworkInterface](docs/LogicalNetworkInterface.md)
 - [Lun](docs/Lun.md)
 - [LunRange](docs/LunRange.md)
 - [Network](docs/Network.md)
 - [NetworkAddress](docs/NetworkAddress.md)
 - [NetworkAddressReservation](docs/NetworkAddressReservation.md)
 - [NetworkConfig](docs/NetworkConfig.md)
 - [NetworkMountPoint](docs/NetworkMountPoint.md)
 - [NetworkUsage](docs/NetworkUsage.md)
 - [NfsExport](docs/NfsExport.md)
 - [NfsShare](docs/NfsShare.md)
 - [OSImage](docs/OSImage.md)
 - [Operation](docs/Operation.md)
 - [ProvisioningConfig](docs/ProvisioningConfig.md)
 - [ProvisioningQuota](docs/ProvisioningQuota.md)
 - [QosPolicy](docs/QosPolicy.md)
 - [RenameInstanceRequest](docs/RenameInstanceRequest.md)
 - [RenameNetworkRequest](docs/RenameNetworkRequest.md)
 - [RenameNfsShareRequest](docs/RenameNfsShareRequest.md)
 - [RenameVolumeRequest](docs/RenameVolumeRequest.md)
 - [ResizeVolumeRequest](docs/ResizeVolumeRequest.md)
 - [SSHKey](docs/SSHKey.md)
 - [ServerNetworkTemplate](docs/ServerNetworkTemplate.md)
 - [SnapshotReservationDetail](docs/SnapshotReservationDetail.md)
 - [Status](docs/Status.md)
 - [SubmitProvisioningConfigRequest](docs/SubmitProvisioningConfigRequest.md)
 - [SubmitProvisioningConfigResponse](docs/SubmitProvisioningConfigResponse.md)
 - [UserAccount](docs/UserAccount.md)
 - [VRF](docs/VRF.md)
 - [VlanAttachment](docs/VlanAttachment.md)
 - [Volume](docs/Volume.md)
 - [VolumeConfig](docs/VolumeConfig.md)
 - [VolumeSnapshot](docs/VolumeSnapshot.md)


<a id="documentation-for-authorization"></a>
## Documentation for Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multithreaded environment to avoid any potential issues.

## Author



